some errors to fix